--- a/index.html
+++ b/index.html
@@ -5,58 +5,67 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>冠位非洲人｜個人簡介</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-image: url('assets/bg.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
+  </style>
 </head>
-<body class="bg-light">
+<body>
 
 <div class="container py-5">
-  <div class="card shadow-lg p-4">
+  <div class="card shadow-lg p-4" style="background: rgba(30,30,30,0.7); color: #fff; backdrop-filter: blur(2px);">
     <div class="d-flex flex-wrap align-items-center mb-4">
-      <img src="assets/me.jpg" class="rounded-circle me-3" width="100" height="100" alt="個人照片（可更換）" onerror="this.style.display='none'">
+      <img src="assets/rina.jpg" class="rounded-circle me-3" width="100" height="100" alt="個人照片（可更換）" onerror="this.style.display='none'">
       <div>
         <h1 class="h2 mb-1">冠位非洲人（Robert Landon）</h1>
-        <p class="text-muted mb-2">真的不是女聲優的狗</p>
+  <p class="mb-2" style="color: #fff; opacity: 0.8;">真的不是女聲優的狗</p>
         <div class="d-flex flex-wrap gap-2">
-          <a href="https://github.com/kevinwei1029" target="_blank" class="btn btn-outline-dark btn-sm">GitHub</a>
-          <a href="https://www.youtube.com/@kevinwei4136/videos" target="_blank" class="btn btn-outline-danger btn-sm">YouTube</a>
-          <a href="https://www.facebook.com/robert.landen.583" target="_blank" class="btn btn-outline-primary btn-sm">Facebook</a>
-          <a href="https://home.gamer.com.tw/profile/index_creation.php?owner=Kevin0256" target="_blank" class="btn btn-outline-info btn-sm">巴哈</a>
+          <a href="https://github.com/kevinwei1029" target="_blank" class="btn btn-dark btn-sm">GitHub</a>
+          <a href="https://www.youtube.com/@kevinwei4136/videos" target="_blank" class="btn btn-danger btn-sm">YouTube</a>
+          <a href="https://www.facebook.com/robert.landen.583" target="_blank" class="btn btn-primary btn-sm">Facebook</a>
+          <a href="https://home.gamer.com.tw/profile/index_creation.php?owner=Kevin0256" target="_blank" class="btn btn-info btn-sm">巴哈小屋</a>
         </div>
       </div>
     </div>
 
     <div>
       <h2 class="h3">關於我</h2>
-      <p>這裡是羅伯特，一個正在交作業大學被GPA摧殘的學生。<br>
-        前動畫社幹部，負責整一些抽象怪活（笑點解析：羅伯特蘭登也是五字神人）。<br>
-        目前最大的心願是有教授願意收留我，如果沒有教授要我的話那寧願轉生成為女聲優的狗。<br>
+      <p>羅伯特，一個正在交作業大學被GPA摧殘的學生。</p>
+      <p>前動畫社幹部，負責整一些抽象怪活（笑點解析：羅伯特蘭登也是五字神人）。<br>
+        目前最大的心願是有教授願意收留我，如果沒有教授要我的話那寧願轉生成為女聲優的狗。</p>
 
-        <h2 class="h5">現地參戰紀錄（持續更新）</h2>
-        <ul>
-          <li>トゲナシトゲアリ 5th鳴動の刻/Live in TAIPEI 凛音の理</li>
-          <li>Roselia Sei Stark</li>
-          <li>歡迎場外認親或者來線下撞</li>
-        </ul>
+      <h2 class="h5">現地參戰紀錄（持續更新）</h2>
+      <ul>
+        <li>トゲナシトゲアリ 5th鳴動の刻/Live in TAIPEI 凛音の理</li>
+        <li>Roselia Sei Stark</li>
+        <li>歡迎場外認親或者來線下撞</li>
+      </ul>
 
-        <h2 class="h5">遊戲類坑單：</h2>
-        <ul>
-          <li>fgo（日）</li>
-          <li>公主連結（台）</li>
-          <li>bgd（日）</li>
-          <li>学マス</li>
-          <li>持續更新中，以上歡迎加友</li>
-        </ul>
+      <h2 class="h5">遊戲類坑單：</h2>
+      <ul>
+        <li>fgo（日）</li>
+        <li>公主連結（台）</li>
+        <li>bgd（日）</li>
+        <li>学マス</li>
+        <li>持續更新中，以上歡迎加友</li>
+      </ul>
 
-        <h2 class="h5">動畫類坑單：</h2>
-        <ul>
-          <li>Girls Band Cry（花田魔法我最～喜歡）</li>
-          <li>lovelive （μ's）</li>
-          <li>lovelive sunshine</li>
-          <li>虹咲（推雪菜）</li>
-          <li>每季新番若干</li>
-          <li>其他諸多新老番族繁不及備載</li>
-        </ul>
+      <h2 class="h5">動畫類坑單：</h2>
+      <ul>
+        <li>Girls Band Cry（花田魔法我最～喜歡）</li>
+        <li>lovelive （μ's）</li>
+        <li>lovelive sunshine</li>
+        <li>虹咲（推雪菜）</li>
+        <li>每季新番若干</li>
+        <li>其他諸多新老番族繁不及備載</li>
+      </ul>
 
-        <p>感謝看到最後的各位，希望能和大家成為（說不定有一天能在演唱會場相見的）好朋友。</p>
+      <p>感謝看到最後的各位，希望能和大家成為（說不定有一天能在演唱會場相見的）好朋友。</p>
     </div>
 
     <div class="mt-4">
@@ -67,7 +76,7 @@
       </ul>
     </div>
 
-    <footer class="mt-4 text-muted small">
+    <footer class="mt-4 small" style="color: #ccc;">
       © <span id="y"></span> 冠位非洲人 · 以 GitHub Pages 發布
     </footer>
   </div>
