--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>冠位非洲人｜個人簡介</title>
+  <title>冠位非洲人｜個人簡介 LitLink Style</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
     body {
       background-image: url('assets/bg.png');
@@ -12,79 +13,166 @@
       background-position: center;
       background-repeat: no-repeat;
       background-attachment: fixed;
+      min-height: 100vh;
+    }
+    .litlink-block {
+      background: rgba(20,20,20,0.6);
+      color: #fff;
+      border-radius: 0.5rem;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.2);
+      margin-bottom: 2rem;
+      padding: 2rem 2rem 1rem 2rem;
+      backdrop-filter: blur(2px);
+    }
+    .profile-block {
+      background: rgba(30,30,30,0);
+      color: #fff;
+      border-radius: 1.5rem;
+      box-shadow: 0 4px 24px rgba(0,0,0,0);
+      margin-bottom: 2rem;
+      padding: 2rem 1.5rem;
+      backdrop-filter: blur(0px);
+    }
+    .profile-block * {
+      font-weight: bold !important;
+      text-shadow: 4px 4px 6px #000, 0 0 2px #000;
+    }
+    .about-social-list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .about-social-item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 0.5rem;
+      color: #fff;
+    }
+    .about-social-item i {
+      font-size: 1.5rem;
+      margin-right: 0.75rem;
+      min-width: 1.5rem;
+    }
+    .about-social-id {
+      font-size: 1rem;
+      color: #fff;
+      font-weight: 500;
+      letter-spacing: 0.5px;
+    }
+    .litlink-social a {
+      color: #fff;
+      font-size: 2rem;
+      margin: 0 0.5rem;
+      transition: color 0.2s;
+    }
+    .litlink-social a:hover {
+      color: #ffd700;
+    }
+    .litlink-avatar {
+      width: 120px;
+      height: 120px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 0px solid #fff;
+      margin-bottom: 1rem;
+    }
+    .litlink-id {
+      font-size: 1.2rem;
+      color: #fff;
+      margin-top: 0.25rem;
     }
   </style>
 </head>
 <body>
-
-<div class="container py-5">
-  <div class="card shadow-lg p-4" style="background: rgba(30,30,30,0.7); color: #fff; backdrop-filter: blur(2px);">
-    <div class="d-flex flex-wrap align-items-center mb-4">
-      <img src="assets/rina.jpg" class="rounded-circle me-3" width="100" height="100" alt="個人照片（可更換）" onerror="this.style.display='none'">
-      <div>
-        <h1 class="h2 mb-1">冠位非洲人（Robert Landon）</h1>
-  <p class="mb-2" style="color: #fff; opacity: 0.8;">真的不是女聲優的狗</p>
-        <div class="d-flex flex-wrap gap-2">
-          <a href="https://github.com/kevinwei1029" target="_blank" class="btn btn-dark btn-sm">GitHub</a>
-          <a href="https://www.youtube.com/@kevinwei4136/videos" target="_blank" class="btn btn-danger btn-sm">YouTube</a>
-          <a href="https://www.facebook.com/robert.landen.583" target="_blank" class="btn btn-primary btn-sm">Facebook</a>
-          <a href="https://home.gamer.com.tw/profile/index_creation.php?owner=Kevin0256" target="_blank" class="btn btn-info btn-sm">巴哈小屋</a>
-        </div>
-      </div>
+  <div class="container py-5" style="max-width: 540px;">
+    <!-- Profile Block -->
+    <div class="profile-block text-center">
+      <img src="assets/rina.jpg" alt="個人照片" class="litlink-avatar" onerror="this.style.display='none'">
+      <h1 class="h3 mb-1">冠位非洲人</h1>
+      <div class="litlink-id">Robert Landen</div>
+      <p class="mt-3">真的不可能成為女聲優的狗（也許可能？）</p>
     </div>
-
-    <div>
-      <h2 class="h3">關於我</h2>
-      <p>羅伯特，一個正在交作業大學被GPA摧殘的學生。</p>
-      <p>前動畫社幹部，負責整一些抽象怪活（笑點解析：羅伯特蘭登也是五字神人）。<br>
+    <!-- Social Links Block -->
+    <div class="litlink-block text-center litlink-social">
+      <ul class="about-social-list">
+        <li class="about-social-item">
+          <a href="https://github.com/kevinwei1029" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
+            <i class="bi bi-github"></i><span class="about-social-id">kevinwei1029</span>
+          </a>
+        </li>
+        <li class="about-social-item">
+          <a href="https://www.youtube.com/@kevinwei4136/videos" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
+            <i class="bi bi-youtube"></i><span class="about-social-id">@kevinwei4136</span>
+          </a>
+        </li>
+        <li class="about-social-item">
+          <a href="https://www.facebook.com/robert.landen.583" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
+            <i class="bi bi-facebook"></i><span class="about-social-id">robert.landen.583</span>
+          </a>
+        </li>
+        <li class="about-social-item">
+          <a href="https://home.gamer.com.tw/profile/index_creation.php?owner=Kevin0256" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
+            <img src="assets/bahaLOGO_1.png" alt="巴哈姆特LOGO" style="width: 1.65rem; height: 1.65rem; margin-right: 0.55rem; display: inline-block; vertical-align: middle; filter: drop-shadow(0 0 2px #000);">
+            <span class="about-social-id">Kevin0256</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- About Block -->
+    <div class="litlink-block">
+      <h2 class="h5">關於我</h2>
+      <p class="mt-3">羅伯特，一個正在交作業大學被GPA摧殘的學生。<br>
+        前動畫社幹部，負責整一些抽象怪活（笑點解析：羅伯特蘭登也是五字神人）。<br>
         目前最大的心願是有教授願意收留我，如果沒有教授要我的話那寧願轉生成為女聲優的狗。</p>
-
+    </div>
+    <!-- Activities Block -->
+    <div class="litlink-block">
       <h2 class="h5">現地參戰紀錄（持續更新）</h2>
       <ul>
         <li>トゲナシトゲアリ 5th鳴動の刻/Live in TAIPEI 凛音の理</li>
         <li>Roselia Sei Stark</li>
-        <li>歡迎場外認親或者來線下撞</li>
       </ul>
-
+        <p>歡迎場外認親或者來線下撞</p>
+    </div>
+    <!-- Games Block -->
+    <div class="litlink-block">
       <h2 class="h5">遊戲類坑單：</h2>
       <ul>
         <li>fgo（日）</li>
         <li>公主連結（台）</li>
         <li>bgd（日）</li>
         <li>学マス</li>
-        <li>持續更新中，以上歡迎加友</li>
       </ul>
-
+        <p>持續更新中，以上歡迎加友</p>
+    </div>
+    <!-- Anime Block -->
+    <div class="litlink-block">
       <h2 class="h5">動畫類坑單：</h2>
       <ul>
         <li>Girls Band Cry（花田魔法我最～喜歡）</li>
         <li>lovelive （μ's）</li>
         <li>lovelive sunshine</li>
         <li>虹咲（推雪菜）</li>
-        <li>每季新番若干</li>
-        <li>其他諸多新老番族繁不及備載</li>
-      </ul>
-
-      <p>感謝看到最後的各位，希望能和大家成為（說不定有一天能在演唱會場相見的）好朋友。</p>
+        </ul>
+      <p>每季新番若干<br>
+      其他諸多新老番族繁不及備載</p>
     </div>
-
-    <div class="mt-4">
-      <h2 class="h3">近期動態</h2>
+    <!-- Recent Activity Block -->
+    <div class="litlink-block">
+      <h2 class="h5">近期動態</h2>
       <ul>
-        <li>🛠️ 正在製作：<a href="https://github.com/kevinwei1029/dc-bot-withdpp">DC機器人</a></li>
-        <li>📝 編輯協力：<a href="https://live.canaria.cc">現地演唱會維基</a></li>
+        <li>🛠️ 曾經做過：<a href="https://github.com/kevinwei1029/dc-bot-withdpp" style="color: #fff; text-decoration: underline;">DC機器人</a></li>
+        <li>📝 編輯協力：<a href="https://live.canaria.cc" style="color: #fff; text-decoration: underline;">現地演唱會維基</a></li>
       </ul>
     </div>
-
-    <footer class="mt-4 small" style="color: #ccc;">
+    <!-- Footer -->
+    <div class="text-center text-light small mt-4" style="opacity:0.7;">
       © <span id="y"></span> 冠位非洲人 · 以 GitHub Pages 發布
-    </footer>
+    </div>
   </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  document.getElementById('y').textContent=new Date().getFullYear()
-</script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    document.getElementById('y').textContent=new Date().getFullYear()
+  </script>
 </body>
 </html>
