--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       margin-bottom: 1rem;
     }
     .litlink-id {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       color: #fff;
       margin-top: 0.25rem;
     }
@@ -88,9 +88,9 @@
     <!-- Profile Block -->
     <div class="profile-block text-center">
       <img src="assets/rina.jpg" alt="個人照片" class="litlink-avatar" onerror="this.style.display='none'">
-      <h1 class="h3 mb-1">冠位非洲人</h1>
+      <h1 class="h2 mb-1">冠位非洲人</h1>
       <div class="litlink-id">Robert Landen</div>
-      <p class="mt-3">真的不可能成為女聲優的狗（也許可能？）</p>
+      <p class="h5 mt-4">真的不可能成為女聲優的狗（也許可能？）</p>
     </div>
     <!-- Social Links Block -->
     <div class="litlink-block text-center litlink-social">
@@ -164,6 +164,12 @@
         <li>🛠️ 曾經做過：<a href="https://github.com/kevinwei1029/dc-bot-withdpp" style="color: #fff; text-decoration: underline;">DC機器人</a></li>
         <li>📝 編輯協力：<a href="https://live.canaria.cc" style="color: #fff; text-decoration: underline;">現地演唱會維基</a></li>
       </ul>
+    </div>
+    <!-- Ending Block -->
+    <div class="litlink-block">
+      <h2 class="h5">結語</h2>
+      <p class="mt-3">感謝看到最後的各位，希望能和大家成為（說不定有一天能在演唱會場相見的）好朋友！</p>
+      <p class="mt-3">2025.08.20</p>
     </div>
     <!-- Footer -->
     <div class="text-center text-light small mt-4" style="opacity:0.7;">
