--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       margin-right: 0.75rem;
       min-width: 1.5rem;
     }
-    .about-social-id {
+    .about-social-intro {
       font-size: 1rem;
       color: #fff;
       font-weight: 500;
@@ -77,7 +77,7 @@
       margin-bottom: 1rem;
     }
     .litlink-id {
-      font-size: 1.4rem;
+      font-size: 1.8rem;
       color: #fff;
       margin-top: 0.25rem;
     }
@@ -88,32 +88,32 @@
     <!-- Profile Block -->
     <div class="profile-block text-center">
       <img src="assets/rina.jpg" alt="個人照片" class="litlink-avatar" onerror="this.style.display='none'">
-      <h1 class="h2 mb-1">冠位非洲人</h1>
+      <h1 class="h1 mb-1">冠位非洲人</h1>
       <div class="litlink-id">Robert Landen</div>
-      <p class="h5 mt-4">真的不可能成為女聲優的狗（也許可能？）</p>
+      <p class="h4 mt-4">真的不可能成為女聲優的狗<br>（也許可能？）</p>
     </div>
     <!-- Social Links Block -->
     <div class="litlink-block text-center litlink-social">
       <ul class="about-social-list">
         <li class="about-social-item">
-          <a href="https://github.com/kevinwei1029" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
-            <i class="bi bi-github"></i><span class="about-social-id">kevinwei1029</span>
+          <a href="https://github.com/kevinwei1029/kevinwei1029.github.io" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
+            <i class="bi bi-github"></i><span class="about-social-intro">Source Code</span>
           </a>
         </li>
         <li class="about-social-item">
           <a href="https://www.youtube.com/@kevinwei4136/videos" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
-            <i class="bi bi-youtube"></i><span class="about-social-id">@kevinwei4136</span>
+            <i class="bi bi-youtube"></i><span class="about-social-intro">專放奇怪影片</span>
           </a>
         </li>
         <li class="about-social-item">
           <a href="https://www.facebook.com/robert.landen.583" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
-            <i class="bi bi-facebook"></i><span class="about-social-id">robert.landen.583</span>
+            <i class="bi bi-facebook"></i><span class="about-social-intro">歡迎聊天戳友</span>
           </a>
         </li>
         <li class="about-social-item">
           <a href="https://home.gamer.com.tw/profile/index_creation.php?owner=Kevin0256" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
             <img src="assets/bahaLOGO_1.png" alt="巴哈姆特LOGO" style="width: 1.65rem; height: 1.65rem; margin-right: 0.55rem; display: inline-block; vertical-align: middle; filter: drop-shadow(0 0 2px #000);">
-            <span class="about-social-id">Kevin0256</span>
+            <span class="about-social-intro">不定期掉落日旅演唱會紀錄文</span>
           </a>
         </li>
       </ul>
@@ -123,7 +123,10 @@
       <h2 class="h5">關於我</h2>
       <p class="mt-3">羅伯特，一個正在交作業大學被GPA摧殘的學生。<br>
         前動畫社幹部，負責整一些抽象怪活（笑點解析：羅伯特蘭登也是五字神人）。<br>
-        目前最大的心願是有教授願意收留我，如果沒有教授要我的話那寧願轉生成為女聲優的狗。</p>
+        目前最大的心願是有教授願意收留我，如果沒有教授要我的話那寧願轉生成為女聲優的狗。<br>
+        <br>
+        常常在巴哈跟FB個版發小作文
+      </p>
     </div>
     <!-- Activities Block -->
     <div class="litlink-block">
@@ -157,13 +160,21 @@
       <p>每季新番若干<br>
       其他諸多新老番族繁不及備載</p>
     </div>
-    <!-- Recent Activity Block -->
+    <!-- Recent Activity Block ->
     <div class="litlink-block">
       <h2 class="h5">近期動態</h2>
       <ul>
         <li>🛠️ 曾經做過：<a href="https://github.com/kevinwei1029/dc-bot-withdpp" style="color: #fff; text-decoration: underline;">DC機器人</a></li>
         <li>📝 編輯協力：<a href="https://live.canaria.cc" style="color: #fff; text-decoration: underline;">現地演唱會維基</a></li>
       </ul>
+    </div>
+    -->
+    <!-- Embed Website Block -->
+    <div class="litlink-block">
+      <h2 class="h5">編輯現地live維基</h2>
+      <div style="width:100%;height:350px;overflow:hidden;border-radius:0.5rem;box-shadow:0 2px 12px rgba(0,0,0,0.15);background:#222;">
+        <iframe src="https://live.canaria.cc" style="width:100%;height:100%;border:none;" allowfullscreen loading="lazy"></iframe>
+      </div>
     </div>
     <!-- Ending Block -->
     <div class="litlink-block">
