--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>冠位非洲人｜個人簡介</title>
+  <title>非洲人｜個人簡介</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
     body {
-      background-image: url('assets/bg.png');
+      background-image: url('assets/profile_bg.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
       background-attachment: fixed;
       min-height: 100vh;
     }
-    .litlink-block {
+    .general-block {
       background: rgba(20,20,20,0.6);
       color: #fff;
       border-radius: 0.5rem;
@@ -93,7 +93,7 @@
       <p class="h4 mt-4">真的不可能成為女聲優的狗<br>（也許可能？）</p>
     </div>
     <!-- Social Links Block -->
-    <div class="litlink-block text-center litlink-social">
+    <div class="general-block text-center litlink-social">
       <ul class="about-social-list">
         <li class="about-social-item">
           <a href="https://github.com/kevinwei1029/kevinwei1029.github.io" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
@@ -119,7 +119,7 @@
       </ul>
     </div>
     <!-- About Block -->
-    <div class="litlink-block">
+    <div class="general-block">
       <h2 class="h5">關於我</h2>
       <p class="mt-3">羅伯特，一個正在交作業大學被GPA摧殘的學生。<br>
         前動畫社幹部，負責整一些抽象怪活（笑點解析：羅伯特蘭登也是五字神人）。<br>
@@ -129,16 +129,19 @@
       </p>
     </div>
     <!-- Activities Block -->
-    <div class="litlink-block">
+    <div class="general-block">
       <h2 class="h5">現地參戰紀錄（持續更新）</h2>
       <ul>
         <li>トゲナシトゲアリ 5th鳴動の刻/Live in TAIPEI 凛音の理</li>
         <li>Roselia Sei Stark</li>
       </ul>
         <p>歡迎場外認親或者來線下撞</p>
+        <a href="docs/live.html" class="btn btn-outline-light" style="background:rgba(255,255,255,0.1);border:1.5px solid #fff;color:#fff;font-weight:bold;backdrop-filter:blur(2px);box-shadow:0 2px 8px rgba(0,0,0,0.08);padding:0.5rem 1.5rem;transition:background 0.2s;">
+            閱讀更多
+        </a>
     </div>
     <!-- Games Block -->
-    <div class="litlink-block">
+    <div class="general-block">
       <h2 class="h5">遊戲類坑單：</h2>
       <ul>
         <li>fgo（日）</li>
@@ -149,7 +152,7 @@
         <p>持續更新中，以上歡迎加友</p>
     </div>
     <!-- Anime Block -->
-    <div class="litlink-block">
+    <div class="general-block">
       <h2 class="h5">動畫類坑單：</h2>
       <ul>
         <li>Girls Band Cry（花田魔法我最～喜歡）</li>
@@ -160,24 +163,15 @@
       <p>每季新番若干<br>
       其他諸多新老番族繁不及備載</p>
     </div>
-    <!-- Recent Activity Block ->
-    <div class="litlink-block">
-      <h2 class="h5">近期動態</h2>
-      <ul>
-        <li>🛠️ 曾經做過：<a href="https://github.com/kevinwei1029/dc-bot-withdpp" style="color: #fff; text-decoration: underline;">DC機器人</a></li>
-        <li>📝 編輯協力：<a href="https://live.canaria.cc" style="color: #fff; text-decoration: underline;">現地演唱會維基</a></li>
-      </ul>
-    </div>
-    -->
     <!-- Embed Website Block -->
-    <div class="litlink-block">
+    <div class="general-block">
       <h2 class="h5">編輯現地live維基</h2>
       <div style="width:100%;height:350px;overflow:hidden;border-radius:0.5rem;box-shadow:0 2px 12px rgba(0,0,0,0.15);background:#222;">
         <iframe src="https://live.canaria.cc" style="width:100%;height:100%;border:none;" allowfullscreen loading="lazy"></iframe>
       </div>
     </div>
     <!-- Ending Block -->
-    <div class="litlink-block">
+    <div class="general-block">
       <h2 class="h5">結語</h2>
       <p class="mt-3">感謝看到最後的各位，希望能和大家成為（說不定有一天能在演唱會場相見的）好朋友！</p>
       <p class="mt-3">2025.08.20</p>
