--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
           </a>
         </li>
         <li class="about-social-item">
+          <a href="https://github.com/kevinwei1029" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
+            <i class="bi bi-github"></i><span class="about-social-intro">Github首頁</span>
+          </a>
+        </li>
+        <li class="about-social-item">
           <a href="https://www.youtube.com/@kevinwei4136/videos" target="_blank" style="display:flex;align-items:center;text-decoration:none;color:#fff;">
             <i class="bi bi-youtube"></i><span class="about-social-intro">專放奇怪影片</span>
           </a>
