--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>非洲人｜個人簡介</title>
+  <title>個人簡介｜冠位非洲人</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
@@ -181,12 +181,18 @@
       <p class="mt-3">感謝看到最後的各位，希望能和大家成為（說不定有一天能在演唱會場相見的）好朋友！</p>
       <p class="mt-3">2025.08.20</p>
     </div>
+    <!-- Visitor Counter Block -->
+    <div class="litlink-block text-center" style="margin-bottom:1.5rem;">
+  <span class="h5" style="color:#fff;margin-right:0.5rem;text-shadow:2px 2px 6px #000,0 0 2px #000;">本站訪客人數：</span>
+  <span id="busuanzi_value_site_uv" style="font-size:1.5rem;font-weight:bold;color:#fff;margin-left:0.5rem;text-shadow:2px 2px 6px #000,0 0 2px #000;"></span>
+    </div>
     <!-- Footer -->
     <div class="text-center text-light small mt-4" style="opacity:0.7;">
       © <span id="y"></span> 冠位非洲人 · 以 GitHub Pages 發布
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <script>
     document.getElementById('y').textContent=new Date().getFullYear()
   </script>
