--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
     <div class="general-block">
       <h2 class="h5">現地參戰紀錄（持續更新）</h2>
       <ul>
-        <li>トゲナシトゲアリ 5th鳴動の刻/Live in TAIPEI 凛音の理</li>
-        <li>Roselia Sei Stark</li>
+        <li>トゲナシトゲアリ 5th鳴動の刻</li>
+        <li>.Roselia Sei Stark</li>
+        <li>トゲナシトゲアリ LIVE in TAIPEI 凛音の理</li>
+        <li>トゲナシトゲアリ LIVE in 日本武道館 奏檄の叫</li>
       </ul>
         <p>歡迎場外認親或者來線下撞</p>
         <a href="docs/live.html" class="btn btn-outline-light" style="background:rgba(255,255,255,0.1);border:1.5px solid #fff;color:#fff;font-weight:bold;backdrop-filter:blur(2px);box-shadow:0 2px 8px rgba(0,0,0,0.08);padding:0.5rem 1.5rem;transition:background 0.2s;">
