--- a/index.html
+++ b/index.html
@@ -149,14 +149,22 @@
     </div>
     <!-- Games Block -->
     <div class="general-block">
-      <h2 class="h5">遊戲類坑單：</h2>
+      <h2 class="h5">手遊 坑單：</h2>
       <ul>
         <li>fgo（日）</li>
-        <li>公主連結（台）</li>
         <li>bgd（日）</li>
         <li>学マス</li>
       </ul>
-        <p>持續更新中，以上歡迎加友</p>
+        <p>持續更新中，以上歡迎私訊加友</p>
+      <h2 class="h5">gal / avg 坑單：</h2>
+      <ul>
+        <li>柚子社作品族繁不及備載</li>
+        <li>拔作島</li>
+        <li>小小惡魔</li>
+        <li>%貓系列</li>
+        <li>魔法少女的魔女審判</li>
+      </ul>
+        <p>持續更新中，有好作品也歡迎推坑</p>
     </div>
     <!-- Anime Block -->
     <div class="general-block">
@@ -165,7 +173,11 @@
         <li>Girls Band Cry（花田魔法我最～喜歡）</li>
         <li>lovelive （μ's）</li>
         <li>lovelive sunshine</li>
-        <li>虹咲（推雪菜）</li>
+        <li>lovelive 虹咲（推雪菜）</li>
+        <li>比宇宙更遠的地方</li>
+        <li>遊戲人生</li>
+        <li>不起眼女主角培育法</li>
+        <li>無職轉生</li>
         </ul>
       <p>每季新番若干<br>
       其他諸多新老番族繁不及備載</p>
@@ -181,7 +193,7 @@
     <div class="general-block">
       <h2 class="h5">結語</h2>
       <p class="mt-3">感謝看到最後的各位，希望能和大家成為（說不定有一天能在演唱會場相見的）好朋友！</p>
-      <p class="mt-3">2025.08.20</p>
+      <p class="mt-3" id="lastUpdateDate">載入中...</p>
     </div>
     <!-- Visitor Counter Block -->
     <div class="litlink-block text-center" style="margin-bottom:1.5rem;">
@@ -196,7 +208,22 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
   <script>
-    document.getElementById('y').textContent=new Date().getFullYear()
+    document.getElementById('y').textContent=new Date().getFullYear();
+    
+    // 透過 GitHub API 獲取倉庫最後更新時間
+    fetch('https://api.github.com/repos/kevinwei1029/kevinwei1029.github.io')
+      .then(response => response.json())
+      .then(data => {
+        const lastUpdate = new Date(data.updated_at);
+        const formattedDate = lastUpdate.getFullYear() + '.' + 
+          String(lastUpdate.getMonth() + 1).padStart(2, '0') + '.' + 
+          String(lastUpdate.getDate()).padStart(2, '0');
+        document.getElementById('lastUpdateDate').textContent = formattedDate;
+      })
+      .catch(error => {
+        console.error('無法獲取更新時間:', error);
+        document.getElementById('lastUpdateDate').textContent = '2025.08.20';
+      });
   </script>
 </body>
 </html>
