--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       background-attachment: fixed;
       min-height: 100vh;
     }
-    
-    /* 手機版背景 (螢幕寬度小於等於 768px) */
-    @media (max-width: 768px) {
+
+    /* 手機版背景 (螢幕寬度小於等於 1024px，包含直式平板) */
+    @media (max-width: 1024px) {
       body {
         background-image: url('assets/profile_bg_mobile.png');
       }
