--- a/index.html
+++ b/index.html
@@ -10,17 +10,10 @@
     body {
       background-image: url('assets/profile_bg.png'); /* 桌面版背景 */
       background-size: cover;
-      background-position: center;
+      background-position: right center;
       background-repeat: no-repeat;
       background-attachment: fixed;
       min-height: 100vh;
-    }
-
-    /* 手機版背景 (螢幕寬度小於等於 1024px，包含直式平板) */
-    @media (max-width: 1024px) {
-      body {
-        background-image: url('assets/profile_bg_mobile.png');
-      }
     }
     .general-block {
       background: rgba(20,20,20,0.6);
