--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <style>
     body {
-      background-image: url('assets/profile_bg.png'); /* 桌面版背景 */
+      background-image: url('assets/profile_bg.webp'); /* 桌面版背景 */
       background-size: cover;
       background-position: right center;
       background-repeat: no-repeat;
@@ -87,7 +87,7 @@
   <div class="container py-5" style="max-width: 540px;">
     <!-- Profile Block -->
     <div class="profile-block text-center">
-      <img src="assets/rina.jpg" alt="個人照片" class="litlink-avatar" onerror="this.style.display='none'">
+      <img src="assets/rina.webp" alt="個人照片" class="litlink-avatar" onerror="this.style.display='none'">
       <h1 class="h1 mb-1">冠位非洲人</h1>
       <div class="litlink-id">Robert Landen</div>
       <p class="h4 mt-4">真的不可能成為女聲優的狗<br>（也許可能？）</p>
