Update Padoru Profile

--- a/index.html
+++ b/index.html
@@ -73,7 +73,10 @@
       height: 150px;
       object-fit: cover;
       border-radius: 50%;
-      border: 0px solid #fff;
+      /*border: 0px solid #fff;*/
+      /*black circular frame:*/
+      border: 3px solid #000;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.35);
       margin-bottom: 1rem;
     }
     .litlink-id {
@@ -87,7 +90,8 @@
   <div class="container py-5" style="max-width: 540px;">
     <!-- Profile Block -->
     <div class="profile-block text-center">
-      <img src="assets/rina.webp" alt="個人照片" class="litlink-avatar" onerror="this.style.display='none'">
+      <!-- <img src="assets/rina.webp" alt="個人照片" class="litlink-avatar" onerror="this.style.display='none'"> -->
+      <img src="assets/nina_padoru.webp" alt="個人照片" class="litlink-avatar" onerror="this.style.display='none'">
       <h1 class="h1 mb-1">冠位非洲人</h1>
       <div class="litlink-id">Robert Landen</div>
       <p class="h4 mt-4">真的不可能成為女聲優的狗<br>（也許可能？）</p>
